--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,112 @@ Green: #00B172
 White: #FFF
 
 */
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+body {
+    font-family:  Verdana, sans-serif;
+    font-size: 10px;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1em; 
+}
+
+.header img {
+    display: block;   
+    max-width: 20vw;
+    width: auto;
+    height: auto;
+}
+
+.menu-bar {
+    height: 100%;
+}
+
+.header ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: flex-end;
+} 
+
+.header ul li a {
+    padding:0 20px;
+    height: 100%;
+    font-size: 3em;
+    text-decoration: none;
+    color: black;
+}
+
+.header ul li a:hover {
+    background-color: rgb(236, 233, 233);
+}
+
+.main-image {
+    background-image: url('../images/landing.jpg');
+    background-size: cover;
+    width: 100vw;
+    height: 100vh;
+    color: white;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.main-image h1 {
+    font-size: 5rem;
+    margin-bottom: 2rem;
+}
+
+.main-image p {
+    font-size: 2em;
+    font-weight: 500;
+    text-align: center;
+    line-height: 1.5em;
+}
